--- a/django_htmx/requirements.txt
+++ b/django_htmx/requirements.txt
@@ -1,5 +1,7 @@
 asgiref==3.8.0
 Django==5.0.3
+django-debug-toolbar==4.3.0
+django-extensions==3.2.3
 django_components==0.61
 sqlparse==0.4.4
 typing_extensions==4.10.0
