--- a/django_htmx/requirements.txt
+++ b/django_htmx/requirements.txt
@@ -1,7 +1,23 @@
 asgiref==3.8.0
+asttokens==3.0.0
+decorator==5.2.1
 Django==5.0.3
 django-debug-toolbar==4.3.0
 django-extensions==3.2.3
 django_components==0.61
+exceptiongroup==1.2.2
+executing==2.2.0
+ipython==8.34.0
+jedi==0.19.2
+matplotlib-inline==0.1.7
+parso==0.8.4
+pexpect==4.9.0
+prompt_toolkit==3.0.50
+ptyprocess==0.7.0
+pure_eval==0.2.3
+Pygments==2.19.1
 sqlparse==0.4.4
+stack-data==0.6.3
+traitlets==5.14.3
 typing_extensions==4.10.0
+wcwidth==0.2.13
